--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,22 @@
 body {
     font-size: 16px;
     color: white;
-    background-color: rgb(20,20,20);
+    background-color: black;
     font-family: monospace;
     text-align: center;
     /* Resets the margin so browser css is ignored - Makes navigation bar tight to screen*/
-    width: 30%;
+    margin: 0;
     height: auto;
-    margin: auto;
-    padding-top: 2%;
-    padding-bottom: 2%;
+}
+
+h1 {
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+p {
+   padding-left: 20%;
+   padding-right: 20%;
 }
 
 a {
@@ -19,12 +26,14 @@ a {
 }
 
 ul {
-    text-align: left;
+    text-align:left;
+    display: inline-block;
+
 }
 /* Navigation bar styles*/
 /* Add a black background color to the nav bar*/
 .navbar {
-    background-color: rgb(0,0,0);
+    background-color: rgb(20,20,20);
     overflow: hidden;
     margin: 0;
     padding: 0;
@@ -51,6 +60,28 @@ ul {
     width: 100%;
 }
 
-.boxed {
-    background-color: rgb(95, 95, 95);
+/*Makes videos stay 16:9 at different resolutions*/
+.outer {
+    margin: auto;
+    max-width: 640px;
+    max-height: 360px;
+    width: 100%;
+    height: 100%;
 }
+
+.inner {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 52.5%;
+}
+
+    .inner iframe {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+    }
+/*End Makes videos stay 16:9 at different resolutions*/
+
