--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,25 +2,28 @@
 
 html {
     scroll-behavior: smooth;
-    margin: 0px;
+    margin: 0;
     height: 100%;
     width: 100%;
+}
+
+header {}
+
+footer {
+    margin-bottom: 50px;
 }
 
 body {
     font-family: sans-serif;
     background-color: rgb(40, 40, 40);
     color: white;
-    margin: 0px;
+    margin: 0;
     height: 100%;
     width: 100%;
 }
 
-.bgimg {
-    background-image: url("assets/images/bg2.jpeg");
-}
-
 h1 {
+    text-align: center;
     font-size: 30px;
 }
 
@@ -28,58 +31,125 @@ h2 {
     font-size: 25px;
 }
 
-h3 {}
-
 p {
     font-size: 20px;
+    text-align: center;
 }
+
+
+/* Navigation Bar Start*/
 
 #navigation {
-    overflow: hidden;
+    background-color: rgb(27, 27, 30);
     margin: 0;
-    /* ensure its always on top*/
-    z-index: 999;
     width: 100%;
+    z-index: 999;
+    border-bottom: 2px solid darkslategrey;
 }
 
-#navigation a {
+nav ul {
     position: relative;
-    float: left;
-    color: white;
-    padding: 25px 50px;
-    text-decoration: none;
-    font-size: 30px;
+    margin: 0;
+    padding: 0;
+    z-index: 1;
 }
 
-#navigation a:hover {
+nav ul a {
+    color: white;
+    font-size: 30px;
+    display: block;
+    text-decoration: none;
+    padding: 10px 15px;
+}
+
+.menu-item {
+    position: relative;
+    display: inline-block;
+    list-style-type: none;
+    text-align: center;
+}
+
+.submenu-item a {
+    font-size: 15px;
+    word-wrap: break-word;
+}
+
+.menu-item:hover .item {
     color: orange;
 }
 
-#navigation select {
-    display: none;
+.submenu-item:hover a {
+    color: orange;
 }
+
+nav ul ul {
+    display: none;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.4);
+    width: 100%;
+}
+
+nav ul ul li {
+    width: 100%;
+    display: inline-block;
+}
+
+nav ul li:hover>ul {
+    display: block;
+}
+
+.mugshot {
+    position: absolute;
+    float: right;
+}
+
+.circle {
+    border-radius: 50%;
+}
+
+
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+
+.sticky+.content {
+    padding-top: 60px;
+}
+
+
+/* Navigation Bar End*/
 
 
 /*  If the screen is less than 800px, this happens*/
 
 @media (max-width: 800px) {
     #navigation a {
-        font-size: 20px;
+        font-size: 12px;
     }
     .title {
         font-size: 20px;
-    }
-    #navigation a {
-        display: none;
-    }
-    #navigation select {
-        display: inline-block;
     }
     .Skills h2 {
         font-size: 20px;
     }
     .Skills li {
         font-size: 15px;
+    }
+    section ul li {
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 1060px) {
+    #navigation a {
+        font-size: 20px;
     }
 }
 
@@ -102,12 +172,20 @@ p {
     width: 200px;
 }
 
+#About hr {
+    width: 200px;
+}
+
+#About p {
+    text-align: center;
+}
+
 .pagecontainer {
     min-height: 100%;
     position: relative;
     height: 100vh;
     width: 100%;
-    box-sizing: border-box;
+    z-index: 1;
 }
 
 #Skills {
@@ -146,25 +224,16 @@ p {
 
 /*Makes videos stay 16:9 at different resolutions*/
 
-.outer {
-    margin: auto;
-    max-width: 1280px;
-    max-height: 720px;
-    width: 100%;
-    height: 100%;
-}
-
-.inner {
+.video-container {
     position: relative;
-    width: 100%;
-    height: 0;
-    padding-bottom: 52.5%;
+    /* Sets the aspect ratio, 56.25 is 16:9*/
+    padding-bottom: 56.25%;
 }
 
-.inner iframe {
-    float: left;
-    left: 0;
+.video-container iframe {
+    position: absolute;
     top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
 }
@@ -172,23 +241,182 @@ p {
 
 /*End Makes videos stay 16:9 at different resolutions*/
 
-.mainContent {
-    text-align: center;
-    top: 50%;
-    margin-bottom: 50px;
-}
-
 ul {
     text-align: left;
     display: inline-block;
 }
 
-.mainContent p {
-    margin-left: 20%;
-    margin-right: 20%;
-}
-
 .hidden {
     display: none;
     opacity: 0;
+}
+
+@keyframes move_wave {
+    0% {
+        transform: translateX(0) translateZ(0) scaleY(1)
+    }
+    50% {
+        transform: translateX(-25%) translateZ(0) scaleY(0.55)
+    }
+    100% {
+        transform: translateX(-50%) translateZ(0) scaleY(1)
+    }
+}
+
+
+/*  Start Wave animation */
+
+.waveWrapper {
+    overflow: hidden;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    margin: auto;
+    z-index: 0;
+}
+
+.waveWrapperInner {
+    position: absolute;
+    width: 100%;
+    overflow: hidden;
+    height: 100%;
+    bottom: -1px;
+    background-image: linear-gradient(to top, #86377b 20%, #27273c 80%);
+}
+
+.bgTop {
+    z-index: 15;
+    opacity: 0.5;
+}
+
+.bgMiddle {
+    z-index: 10;
+    opacity: 0.75;
+}
+
+.bgBottom {
+    z-index: 5;
+}
+
+.wave {
+    position: absolute;
+    left: 0;
+    width: 200%;
+    height: 100%;
+    background-repeat: repeat no-repeat;
+    background-position: 0 bottom;
+    transform-origin: center bottom;
+}
+
+.waveTop {
+    background-size: 50% 100px;
+}
+
+.waveAnimation .waveTop {
+    animation: move-wave 3s;
+    -webkit-animation: move-wave 3s;
+    -webkit-animation-delay: 1s;
+    animation-delay: 1s;
+}
+
+.waveMiddle {
+    background-size: 50% 120px;
+}
+
+.waveAnimation .waveMiddle {
+    animation: move_wave 10s linear infinite;
+}
+
+.waveBottom {
+    background-size: 50% 100px;
+}
+
+.waveAnimation .waveBottom {
+    animation: move_wave 15s linear infinite;
+}
+
+
+/*  End Wave animation */
+
+#projects {
+    float: left;
+}
+
+.cards {
+    /* Center cards on webpage */
+    margin: 0 auto;
+    /* Set maximum width*/
+    max-width: 1500px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(325px, 1fr));
+    grid-auto-rows: auto;
+    padding-top: 30px;
+    gap: 20px;
+    font-family: sans-serif;
+}
+
+.card {
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+}
+
+.card__title {
+    background-color: white;
+    text-align: center;
+    font-size: 1.2em;
+    color: black;
+}
+
+.card__image {
+    height: 325px;
+    width: 100%;
+    display: block;
+}
+
+.card__content {
+    line-height: 1.5;
+    font-size: 0.9em;
+    padding: 15px;
+    background: rgba(119, 113, 113, 0.1);
+}
+
+.card__content>p:first-of-type {
+    margin-top: 0;
+}
+
+.card__content>p:last-of-type {
+    margin-bottom: 0;
+}
+
+.card__info {
+    padding: 5px;
+    display: flex;
+    justify-content: space-between;
+    background: #eeeeee;
+    font-size: 0.8em;
+    border-bottom: 2px solid #cccccc;
+}
+
+.card__info>a>button {
+    font-size: 20px;
+    border-radius: 15px;
+    border: none;
+    background-color: rgba(92, 92, 92, 0.8);
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 15px;
+    cursor: pointer;
+}
+
+.linkdiv>a>button {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
+    cursor: pointer;
+}
+
+.linkdiv>a>button:hover {
+    color: black;
+    background-color: orange;
 }
