--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,6 +23,7 @@ body {
 }
 
 h1 {
+    margin: 0 auto;
     text-align: center;
     font-size: 30px;
 }
@@ -147,12 +148,6 @@ nav ul li:hover>ul {
     }
 }
 
-@media (max-width: 1060px) {
-    #navigation a {
-        font-size: 20px;
-    }
-}
-
 .sectionTitle:hover {
     color: orange;
 }
@@ -192,9 +187,6 @@ nav ul li:hover>ul {
     width: 100%;
     text-align: center;
     position: relative;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 .Skills {
