--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,6 +54,7 @@ nav ul {
     margin: 0;
     padding: 0;
     z-index: 1;
+    
 }
 
 nav ul a {
@@ -77,11 +78,11 @@ nav ul a {
 }
 
 .menu-item:hover .item {
-    color: orange;
+    color: skyblue;
 }
 
 .submenu-item:hover a {
-    color: orange;
+    color: skyblue;
 }
 
 nav ul ul {
@@ -106,7 +107,7 @@ nav ul li:hover>ul {
 }
 
 .circle {
-    border-radius: 50%;
+    border-radius: 20%;
 }
 
 
@@ -118,6 +119,13 @@ nav ul li:hover>ul {
     width: 100%;
 }
 
+.vertical-center{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
 
 /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
 
@@ -150,7 +158,7 @@ nav ul li:hover>ul {
 }
 
 .sectionTitle:hover {
-    color: orange;
+    color: skyblue;
 }
 
 
@@ -394,8 +402,8 @@ ul {
 }
 
 .linkdiv>a>button:hover {
-    color: black;
-    background-color: orange;
+    color: skyblue;
+    background-color: sky;
 }
 
 .grid-container {
@@ -444,7 +452,8 @@ ul {
     -moz-animation: fadeIn ease 5s;
     -o-animation: fadeIn ease 5s;
     -ms-animation: fadeIn ease 5s;
-  }@keyframes fadeIn {
+  }
+  @keyframes fadeIn {
     0% {
       opacity:0;
     }
@@ -486,4 +495,26 @@ ul {
     }
     100% {
       opacity:1;
+  }
+}
+
+  .bgblack{
+      background-color: #1A1A1D;
+  }
+
+  .bggrey{
+    background-color: #4E4E50;
+    
+  }
+
+  .bgcrimson{
+    background-color: #6F2232;
+  }
+
+  .bgpink {
+    background-color: #950740;
+  }
+
+  .bgred{
+      background-color: #C3073F
   }
