--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,15 +3,15 @@
     font-family: sans-serif;
     scroll-behavior: smooth;
 
-    --text-primary: #b6b6b6;
-    --text-secondary: #ececec;
-    --bg-primary: #23232e;
+    --text-accent: #b6b6b6;
+    --text-primary: #ffffff;
+    --text-secondary: #b6b6b6;
+    --bg-primary: #1d1d20;
     --bg-secondary: #141418;
     --transition-speed: 600ms;
 }
 
 body {
-    color: black;
     background-color: #2f2f35;
     margin: 0;
     padding: 0;
@@ -25,7 +25,7 @@ body::-webkit-scrollbar-track {
     background: #1e1e24;
 }
 body::-webkit-scrollbar-thumb {
-    background: #6649b8;
+    background: #8a8a8a;
 }
 main {
     margin-left: 5rem;
@@ -60,7 +60,7 @@ main {
     display: flex;
     align-items: center;
     height: 5rem;
-    color: var(--text-primary);
+    color: var(--text-accent);
     text-decoration: none;
     filter: grayscale(100%) opacity(0.7);
     transition: var(--transition-speed);
@@ -115,21 +115,23 @@ main {
     margin-bottom: 50px;
 }
 .box-shadow {
-    box-shadow: 10px 10px;
+    box-shadow: 10px 10px black;
 }
 .centered-text{
     position:absolute;
     top: 50%;
     left:50%;
     transform:translate(-50%,-50%);
-    color:white;
+    color: var(--text-primary);
 }
 
 .section {
     width: 100%;
-    background-color: white;
+    background-color: var(--bg-primary);
+    color: var(--text-primary);
     overflow: hidden;
     margin-top:0px;
+    margin-bottom: 50px;
     padding: 100px 0;
     display: flex;
     align-items: center;
@@ -139,14 +141,14 @@ main {
 .inner-container{
     width: 55%;
     float: right;
-    background-color: white;
+    background-color: var(--bg-primary);
     padding: 150px;
     
 }
 
 .small-section {
     width: 50%;
-    background-color: white;
+    background-color: var(--bg-primary);
     overflow: hidden;
     margin-top:50px;
     padding: 100px 0;
@@ -154,7 +156,7 @@ main {
     align-items: center;
     justify-content: center;
 }
-.inner-container h1{
+.section-title{
     margin-bottom: 30px;
     font-size: 30px;
     font-weight: 900;
@@ -163,9 +165,9 @@ main {
 .center {
     text-align: center;
 }
-.text {
+.section-text {
     font-size: 13px;
-    color: #545454;
+    color: var(--text-secondary);
     line-height: 30px;
     text-align: justify;
     margin-bottom: 40px;
@@ -179,16 +181,12 @@ main {
     font-weight: 900;
 }
 
-.bluebox{
-    background-color: #234099;
-    color: white;
-}
 
 #education {
     background-image: url(assets/images/hoe.jpg);
 }
 span a {
-    color: black;
+    color: var(--text-secondary);
 }
 
 .stroke {
@@ -198,11 +196,11 @@ span a {
 
 .project-ico-right{
     float: right;
-    color: black;
+    color: var(--text-primary);
 }
 .project-ico-left{
     float: left;
-    color: black;
+    color: var(--text-primary);
 }
 
 .flex-img {
